--- a/templates/tmplMessage.html
+++ b/templates/tmplMessage.html
@@ -1,5 +1,6 @@
 <script id="tmpl_messages_list" type="text/template">
 	<li id="{{id}}" class="arrow">
-        <strong> {{message}} </strong>
+        <strong> {{title}} </strong>		
+        <strong> {{description}} </strong>
     </li>
 </script> 
