--- a/templates/tmplMessage.html
+++ b/templates/tmplMessage.html
@@ -1,6 +1,8 @@
 <script id="tmpl_messages_list" type="text/template">
 	<li id="{{id}}" class="arrow">
         <strong> {{title}} </strong>		
-        <strong> {{description}} </strong>
+        <strong> {{description}} </strong>   
+        	
+        <input id='priority' name='priority' type='number' min='1' max='5' value='{{priority}}' />        	
     </li>
 </script> 
